added named pipe server and client. changed functionality according new servers and clients.

--- a/OF.ServiceApp/OF.ServiceApp.csproj
+++ b/OF.ServiceApp/OF.ServiceApp.csproj
@@ -80,6 +80,9 @@
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="RestSharp">
+      <HintPath>..\Toolkits\RestSharp\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
@@ -101,6 +104,7 @@
     <Compile Include="Controllers\OFOnlyAtParseController.cs" />
     <Compile Include="Controllers\OFRepeatController.cs" />
     <Compile Include="Core\OFBaseController.cs" />
+    <Compile Include="Events\OFForcedEvent.cs" />
     <Compile Include="Events\OFResumeReadEvent.cs" />
     <Compile Include="Events\OFStartReadEvent.cs" />
     <Compile Include="Events\OFStopEvent.cs" />
