modified athe named servers and client for query/answer mode. added diff changes regarding these changes into service application and plugin.

--- a/WSUI.Core/OF.Core.csproj
+++ b/WSUI.Core/OF.Core.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Data\NamedPipeMessages\OFIsForcedMessage.cs" />
     <Compile Include="Data\NamedPipeMessages\OFReaderStatus.cs" />
     <Compile Include="Data\NamedPipeMessages\OFServiceApplicationMessage.cs" />
+    <Compile Include="Data\NamedPipeMessages\Response\OFNamedServerResponse.cs" />
     <Compile Include="Data\Settings\ControllerSettings\OFEveryHourPeriodSettings.cs" />
     <Compile Include="Data\Settings\ControllerSettings\OFNightIdleSettings.cs" />
     <Compile Include="Data\Settings\ControllerSettings\OFOnlyAtSettings.cs" />
