--- a/WSPreview/App.config
+++ b/WSPreview/App.config
@@ -2,4 +2,4 @@
 <configuration>
 
 
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
