added bat file for bulding parser application. included it into main lbuilding pipeline. added parser controller and changed the workflow of parsing controller.

--- a/OF.ServiceApp/OF.ServiceApp.csproj
+++ b/OF.ServiceApp/OF.ServiceApp.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Rest\OFNancyBootstraper.cs" />
     <Compile Include="Rest\OFRestHosting.cs" />
     <Compile Include="Rest\OFRestModule.cs" />
+    <Compile Include="Service\OFParserApplicationHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
