--- a/Toolkits/Elasticsearch/config/elasticsearch.yml
+++ b/Toolkits/Elasticsearch/config/elasticsearch.yml
@@ -14,13 +14,13 @@
 #
 # Use a descriptive name for your cluster:
 #
-#cluster.name: my-application
+cluster.name: OutlookFinder_Cluster
 #
 # ------------------------------------ Node ------------------------------------
 #
 # Use a descriptive name for the node:
 #
-#node.name: node-1
+node.name: OutlookFinder_Node
 #
 # Add custom attributes to the node:
 #
