--- a/OF.EmailParser/pom.xml
+++ b/OF.EmailParser/pom.xml
@@ -75,10 +75,11 @@
             <version>2.4</version>
         </dependency>
         <dependency>
-            <groupId>org.elasticsearch.client</groupId>
-            <artifactId>rest</artifactId>
-            <version>5.2.0</version>
+            <groupId>io.searchbox</groupId>
+            <artifactId>jest</artifactId>
+            <version>2.0.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.jglue.fluent-json</groupId>
             <artifactId>fluent-json</artifactId>
