--- a/WSUI.Infrastructure/OF.Infrastructure.csproj
+++ b/WSUI.Infrastructure/OF.Infrastructure.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Implements\ElasticSearch\Clients\OFElasticRiverStatus.cs" />
     <Compile Include="Implements\ElasticSearch\Clients\OFElasticSeachIndexOutlookItemsClient.cs" />
     <Compile Include="Implements\ElasticSearch\Clients\OFElasticSearchClient.cs" />
+    <Compile Include="Implements\ElasticSearch\Clients\OFElasticUpdateSettingsClient.cs" />
     <Compile Include="Implements\ElasticSearch\Clients\OFForceClient.cs" />
     <Compile Include="Implements\ElasticSearch\Clients\OfServiceAppOfPluginStatusClient.cs" />
     <Compile Include="Implements\ElasticSearch\Clients\OFElasticSearchRemovingClient.cs" />
