--- a/WSUI.Unistall/OF.Unistall.csproj
+++ b/WSUI.Unistall/OF.Unistall.csproj
@@ -78,6 +78,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
