--- a/WSUI.Core/OF.Core.csproj
+++ b/WSUI.Core/OF.Core.csproj
@@ -226,6 +226,8 @@
     <Compile Include="Interfaces\IElasticSearchIndexOutlookItemsClient.cs" />
     <Compile Include="Interfaces\IElasticSearchItemsCount.cs" />
     <Compile Include="Interfaces\IOFElasticsearchShortContactClient.cs" />
+    <Compile Include="Interfaces\IOFSearchThreadPool.cs" />
+    <Compile Include="Interfaces\IOFWorkThread.cs" />
     <Compile Include="Interfaces\IServiceAppOFPluginStatusClient.cs" />
     <Compile Include="Interfaces\IElasticSearchRiverStatus.cs" />
     <Compile Include="Interfaces\IElasticTrackingClient.cs" />
@@ -379,6 +381,8 @@
     <Compile Include="JsonSettings\OFLowercaseContractResolver.cs" />
     <Compile Include="Logger\OFEventLogger.cs" />
     <Compile Include="Logger\OFLogger.cs" />
+    <Compile Include="Pool\OFSearchThreadPool.cs" />
+    <Compile Include="Pool\OFWorkThread.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Dialog\Interfaces\IOFEmailViewModel.cs" />
     <Compile Include="Utils\Dialog\Interfaces\IOFView.cs" />
